@@ -25,9 +25,9 @@ extern NSString *const CPTBarPlotBindingBarBases;
  *	@brief Enumeration of bar plot data source field types
  **/
 typedef enum _CPTBarPlotField {
-	CPTBarPlotFieldBarLocation = 2, ///< Bar location on independent coordinate axis.
-	CPTBarPlotFieldBarTip	   = 3, ///< Bar tip value.
-	CPTBarPlotFieldBarBase	   = 4  ///< Bar base (used only if barBasesVary is YES).
+	CPTBarPlotFieldBarLocation, ///< Bar location on independent coordinate axis.
+	CPTBarPlotFieldBarTip,      ///< Bar tip value.
+	CPTBarPlotFieldBarBase      ///< Bar base (used only if barBasesVary is YES).
 }
 CPTBarPlotField;
 
